@@ -486,7 +486,8 @@ static Ecore_Evas_Engine_Func _ecore_directfb_engine_func =
      NULL,                              /* alpha */
      NULL, //transparent
 
-     NULL // render
+     NULL, // render
+     NULL  // screen_geometry_get
 };
 #endif
 
